[package]
name = "forcast-async"
version = "0.1.0"
authors = ["John Gallagher <john.willis.gallagher@gmail.com>"]
keywords = ["forecast", "weather", "darksky", "async"]

[dependencies]
serde = "1.0.84"
serde_derive = "1.0.84"
serde_json = "1.0.35"
reqwest = "0.9.8"
itertools = "0.8.0"
futures = "0.1.25"
tokio = "0.1"