[package]
name = "forecast-async"
description = "An async Rust client for the Dark Sky API."
version = "0.1.1"
authors = ["John Gallagher <john.willis.gallagher@gmail.com>"]
keywords = ["forecast", "weather", "darksky", "async"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/jgall/forecast-rs-async"

[dependencies]
serde = "1.0.84"
serde_derive = "1.0.84"
serde_json = "1.0.35"
reqwest = "0.9.8"
itertools = "0.8.0"
futures = "0.1.25"